<resources>
    <string name="app_name">BabySouk</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_brands">Brands</string>
    <string name="title_offers">Offers</string>
    <string name="title_wish_list">Wishlist</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_address_book">Address Book</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_settings">Settings</string>
    <string name="title_cart">My Cart</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="nav_header_title">G-mail</string>
    <string name="nav_header_subtitle">vidyesh95@gmail.com</string>
    <string name="nav_header_background">Navigation header background</string>
    <string name="menu_baby_essentials">Baby Essentials</string>
    <string name="menu_stroller_souk">Stroller Souk</string>
    <string name="menu_car_seats">Car Seats</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_bath_time">Bath Time</string>
    <string name="menu_play_time">Play Time</string>
    <string name="menu_back_to_school">Back To School</string>
    <string name="menu_travel_souk">Travel Souk</string>
    <string name="menu_gift_souk">Gift Souk</string>
    <string name="menu_outlet">Outlet</string>
    <string name="menu_by_brand">By Brand</string>
    <string name="menu_contact">Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="first_menu_item">First Menu Item</string>
    <string name="first_sub_menu_item">First Sub Menu Item</string>
    <string name="second_sub_menu_item">Second Sub Menu Item</string>
    <string name="third_sub_menu_item">Third Sub Menu Item</string>
    <string name="fourth_sub_menu_item">Fourth Sub Menu Item</string>
    <string name="fifth_sub_menu_item">Fifth Sub Menu Item</string>
    <string name="sixth_sub_menu_item">SixthFirst Sub Menu Item</string>
    <string name="seventh_sub_menu_item">Seventh Sub Menu Item</string>
    <string name="select_your_region">Select your region</string>
    <string name="country_flag">Country Flag</string>
    <string name="country_name">UAE</string>
    <string name="select_region_hint">Select Region</string>
    <string name="select_preferred_language">Select preferred language</string>
    <string name="lang_confirm_btn_text">GET STARTED</string>
    <string-array name="enquiry">
        <item>How did you heard about us ?</item>
        <item>Web commercial</item>
        <item>Television ads</item>
        <item>Word of mouth</item>
        <item>Education institute</item>
        <item>Youtube</item>
        <item>Past customer</item>
    </string-array>
    <string name="afghanistan">Afghanistan</string>
    <string name="albania">Albania</string>
    <string name="algeria">Algeria</string>
    <string name="andorra">Andorra</string>
    <string name="angola">Angola</string>
    <string name="anguilla">Anguilla</string>
    <string name="argentina">Argentina</string>
    <string name="armenia">Armenia</string>
    <string name="aruba">Aruba</string>
    <string name="australia">Australia</string>
    <string name="austria">Austria</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="bahamas">Bahamas</string>
    <string name="bahrain">Bahrain</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="barbados">Barbados</string>
    <string name="belarus">Belarus</string>
    <string name="belgium">Belgium</string>
    <string name="belize">Belize</string>
    <string name="benin">Benin</string>
    <string name="bermuda">Bermuda</string>
    <string name="bhutan">Bhutan</string>
    <string name="bolivia">Bolivia</string>
    <string name="bosnia_and_herzegovina">Bosnia And\nHerzegovina</string>
    <string name="botswana">Botswana</string>
    <string name="brazil">Brazil</string>
    <string name="british_virgin_islands">British Virgin\nIslands</string>
    <string name="brunei">Brunei</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="burkina_faso">Burkina Faso</string>
    <string name="burundi">Burundi</string>
    <string name="cambodia">Cambodia</string>
    <string name="cameroon">Cameroon</string>
    <string name="canada">Canada</string>
    <string name="cape_verde">Cape Verde</string>
    <string name="cayman_islands">Cayman Islands</string>
    <string name="central_african_republic">Central African\nRepublic</string>
    <string name="chad">Chad</string>
    <string name="chile">Chile</string>
    <string name="china">China</string>
    <string name="colombia">Colombia</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="cote_divoire">Cote Divoire</string>
    <string name="croatia">Croatia</string>
    <string name="cuba">Cuba</string>
    <string name="curacao">Curacao</string>
    <string name="cyprus">Cyprus</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="democratic_republic_of_the_congo">Democratic Republic\nOf The Congo</string>
    <string name="democratic_republic_of_the_congo_short_form">D.R. Congo</string>
    <string name="denmark">Denmark</string>
    <string name="djibouti">Djibouti</string>
    <string name="dominica">Dominica</string>
    <string name="dominican_republic">Dominican\nRepublic</string>
    <string name="east_timor">East Timor</string>
    <string name="ecuador">Ecuador</string>
    <string name="egypt">Egypt</string>
    <string name="el_salvador">El Salvador</string>
    <string name="equatorial_guinea">Equatorial\nGuinea</string>
    <string name="eritrea">Eritrea</string>
    <string name="estonia">Estonia</string>
    <string name="eswatini">Eswatini</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="falkland_islands">Falkland\nIslands</string>
    <string name="faroe_islands">Faroe Islands</string>
    <string name="fiji">Fiji</string>
    <string name="finland">Finland</string>
    <string name="france">France</string>
    <string name="french_guiana">French Guiana</string>
    <string name="french_polynesia">French\nPolynesia</string>
    <string name="gabon">Gabon</string>
    <string name="gambia">Gambia</string>
    <string name="georgia">Georgia</string>
    <string name="germany">Germany</string>
    <string name="ghana">Ghana</string>
    <string name="gibraltar">Gibraltar</string>
    <string name="greece">Greece</string>
    <string name="greenland">Greenland</string>
    <string name="grenada">Grenada</string>
    <string name="guatemala">Guatemala</string>
    <string name="guernsey">Guernsey</string>
    <string name="guinea">Guinea</string>
    <string name="guinea_bissau">Guinea Bissau</string>
    <string name="guyana">Guyana</string>
    <string name="haiti">Haiti</string>
    <string name="honduras">Honduras</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungary">Hungary</string>
    <string name="iceland">Iceland</string>
    <string name="india">India</string>
    <string name="indonesia">Indonesia</string>
    <string name="iran">Iran</string>
    <string name="iraq">Iraq</string>
    <string name="ireland">Ireland</string>
    <string name="isle_of_man">Isle Of Man</string>
    <string name="israel">Israel</string>
    <string name="italy">Italy</string>
    <string name="jamaica">Jamaica</string>
    <string name="japan">Japan</string>
    <string name="jersey">Jersey</string>
    <string name="jordan">Jordan</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="kenya">Kenya</string>
    <string name="kosovo">Kosovo</string>
    <string name="kuwait">Kuwait</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="laos">Laos</string>
    <string name="latvia">Latvia</string>
    <string name="lebanon">Lebanon</string>
    <string name="liberia">Liberia</string>
    <string name="libya">Libya</string>
    <string name="liechtenstein">Liechtenstein</string>
    <string name="lithuania">Lithuania</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="macao">Macao</string>
    <string name="madagascar">Madagascar</string>
    <string name="malawi">Malawi</string>
    <string name="malaysia">Malaysia</string>
    <string name="maldives">Maldives</string>
    <string name="mali">Mali</string>
    <string name="malta">Malta</string>
    <string name="mauritania">Mauritania</string>
    <string name="mauritius">Mauritius</string>
    <string name="mexico">Mexico</string>
    <string name="moldova">Moldova</string>
    <string name="monaco">Monaco</string>
    <string name="mongolia">Mongolia</string>
    <string name="montenegro">Montenegro</string>
    <string name="montserrat">Montserrat</string>
    <string name="morocco">Morocco</string>
    <string name="mozambique">Mozambique</string>
    <string name="myanmar">Myanmar</string>
    <string name="namibia">Namibia</string>
    <string name="nepal">Nepal</string>
    <string name="netherlands">Netherlands</string>
    <string name="new_caledonia">New Caledonia</string>
    <string name="new_zealand">New Zealand</string>
    <string name="nicaragua">Nicaragua</string>
    <string name="niger">Niger</string>
    <string name="nigeria">Nigeria</string>
    <string name="north_macedonia">North\nMacedonia</string>
    <string name="norway">Norway</string>
    <string name="oman">Oman</string>
    <string name="pakistan">Pakistan</string>
    <string name="palestine">Palestine</string>
    <string name="panama">Panama</string>
    <string name="papua_new_guinea">Papua New\nGuinea</string>
    <string name="paraguay">Paraguay</string>
    <string name="peru">Peru</string>
    <string name="philippines">Philippines</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="qatar">Qatar</string>
    <string name="republic_of_the_congo">Republic Of\nThe Congo</string>
    <string name="romania">Romania</string>
    <string name="russia">Russia</string>
    <string name="rwanda">Rwanda</string>
    <string name="saint_lucia">Saint Lucia</string>
    <string name="united_arab_emirates_currency">AED</string>
    <string name="recover_dialog_header">Recover password</string>
    <string name="recover_dialog_message">To retrieve your password, please enter your emai
        address below and click \'RETRIEVE PASSWORD\'.\n\nA password reset link will then
        be sent to you by email.</string>
    <string name="comma_text">,</string>
    <string name="sub_menu_babyessentials_clothing_and_accessories"><![CDATA[Clothing & Accessories]]></string>
    <string name="email_id">E-mail id</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="retrieve_password">RETRIEVE PASSWORD</string>
    <string name="showing_items">Showing 0 items</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="clothing">Clothing</string>
    <string name="sort_by">Sort By</string>
    <string name="defualt_order">Default Order</string>
    <string name="newest">Newest</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="baby_gear"><![CDATA[Baby Gear & Essentials ]]></string>
    <string name="featured">Featured Souks</string>
    <string name="feeding">Feeding</string>
    <string name="toys_books"><![CDATA[Baby Toys & Books]]></string>
    <string name="aed_0_100">AED 0–100</string>
    <string name="aed_100_200">AED 100–200</string>
    <string name="aed_200_500">AED 200–500</string>
    <string name="aed_500_1000">AED 500–1000</string>
</resources>