<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_outline_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_brands"
        android:icon="@drawable/ic_brand_outline_black_24dp"
        android:title="@string/title_brands" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offers_outline_black_24dp"
        android:title="@string/title_offers" />

    <item
        android:id="@+id/navigation_wish_list"
        android:icon="@drawable/ic_wish_list_outline_black_24dp"
        android:title="@string/title_wish_list" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/title_account" />

</menu>
