<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".productListing.filterby.category.CategoryFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_arrival_text"
            android:text="@string/new_arrivals"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ram_alshamsi"
            android:text="7ram_alshamsi"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/new_arrival_text"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/baby_gear"
            android:text="@string/baby_gear"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/ram_alshamsi"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/featured"
            android:text="@string/featured"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/baby_gear"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stroller"
            android:text="@string/menu_stroller_souk"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/featured"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feeding"
            android:text="@string/feeding"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/stroller"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloting_accessories"
            android:text="@string/sub_menu_babyessentials_clothing_and_accessories"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/feeding"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toys_books"
            android:text="@string/toys_books"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/cloting_accessories"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>