<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bcod.babysouk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_brands"
        android:name="com.bcod.babysouk.ui.brands.BrandsFragment"
        android:label="@string/title_brands"
        tools:layout="@layout/brands_fragment" >
        <action
            android:id="@+id/action_navigation_brands_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.bcod.babysouk.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/offers_fragment" >
        <action
            android:id="@+id/action_navigation_offers_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wish_list"
        android:name="com.bcod.babysouk.ui.wishlist.WishListFragment"
        android:label="@string/title_wish_list"
        tools:layout="@layout/wish_list_fragment" >
        <action
            android:id="@+id/action_navigation_wish_list_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.bcod.babysouk.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/account_fragment" >
        <action
            android:id="@+id/action_navigation_account_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>
