<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".productListing.filterby.price.PriceFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aed_0_100"
            android:text="@string/aed_0_100"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aed_100_200"
            android:text="@string/aed_100_200"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/aed_0_100"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aed_200_500"
            android:text="@string/aed_200_500"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/aed_100_200"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aed_500_1000"
            android:text="@string/aed_500_1000"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/aed_200_500"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>