<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/sort_by_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/semiBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sort_by"/>

    <View
        android:id="@+id/line_sort"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:background="@color/semiBlack"
        app:layout_constraintTop_toBottomOf="@id/sort_by_text"/>

    <TextView
        android:id="@+id/default_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:textSize="16dp"
        android:textColor="@color/semiBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_sort"
        android:text="@string/defualt_order"/>

    <TextView
        android:id="@+id/newest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16dp"
        android:textColor="@color/semiBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/default_order"
        android:text="@string/newest"/>

    <TextView
        android:id="@+id/lowest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16dp"
        android:textColor="@color/semiBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newest"
        android:text="@string/lowest_price"/>

    <TextView
        android:id="@+id/highest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16dp"
        android:textColor="@color/semiBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lowest"
        android:text="@string/highest_price"/>
</androidx.constraintlayout.widget.ConstraintLayout>