<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="14dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/recover_dialog_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/recover_dialog_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dialog_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retrieve_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="28dp"
            android:paddingTop="14dp"
            android:paddingRight="28dp"
            android:paddingBottom="14dp"
            android:text="@string/retrieve_password"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimary"
            app:shapeAppearance="@style/MaterialButton" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>