<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".productListing.ProductListingFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/product_listing_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/clothing"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/account_fragment_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/showing_items"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/product_listing_header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_grid_recycler_view"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/product_listing_header"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <TextView
                android:id="@+id/check_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_grid_recycler_view"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/items_buttons"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/filter"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:backgroundTint="@color/semiBlack" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sort"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:backgroundTint="@color/semiBlack"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>